fix: Align elements so there is no vertical scrolling

--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -5,6 +5,9 @@
 }
 
 .score-container {
+	display: flex;
+	justify-content: center;
+	gap: 1em;
 	text-align: center;
 	margin-top: 1em;
 	font-size: 1.3rem;
@@ -17,11 +20,10 @@
 	justify-items: center;
 	align-items: center;
 	grid-template-columns: 1fr 1fr 1fr;
-	grid-template-rows: repeat(auto-fit, 300px);
+	grid-template-rows: repeat(auto-fit, 1fr);
 	height: 100%;
 	width: 80%;
 	max-width: 1000px;
-	margin-top: 2em;
 	margin-left: auto;
 	margin-right: auto;
 }
